# xray-routing-through-unreliable-outbounds

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
data/monte-carlo/: metadata.json  report.md  summary.csv
docs/: xray-algorithm-mapping.md
scripts/: build_pages.py
site/: app.js  index.html  simulator-worker.js  styles.css
tests/: test_experiment.py  test_model.py  test_observatory.py  test_simulation.py  test_strategies.py  test_webapp.py
tests/fixtures/summary_with_worst_outage/: metadata.json  summary.csv
xray_strategy_sim/: __init__.py  cli.py  experiment.py  model.py  observatory.py  simulation.py  strategies.py  webapp.py
